bug fix: shrinking headers jittery on firefox via moving spacing to sections from decades

--- a/history.scss
+++ b/history.scss
@@ -34,6 +34,7 @@ color: #0E4174;}
 section {
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
 
     header.decade { 
         display: flex;
@@ -42,11 +43,10 @@ section {
         background: white;
         color: #0057b7;
         align-items: center;
-        padding: 30px 0px 0px 0px;
         position: sticky;
         top: 0px;
         transition: .2s all ease-in-out;
-        transform-origin: 0;
+        transform-origin: top;
 
         a, a:hover, a:visited, a:active {
             text-decoration: none;
@@ -71,7 +71,7 @@ section {
         
         &.small {
             font-size: 1rem;
-            padding: 10px 0;
+            padding: 10px 0 10px 0;
             
             .chevron {
                 visibility: visible;
